data/all_generated_tests/raw_wast_tests/block_IncorrectHandlingofControlFlowAcrossModuleBoundaries_89.wast
;; **Test 10:** Prepare a WASM module with a function including complex control flow, such as multiple `block` and `br_if` instructions. Import this function into another module, and trigger these control flows, ensuring correct label handling and stack context transition across module boundaries.

(assert_invalid
  (module
    (import "env" "importedFunction" (func $importedFunction (result i32)))
    (func (export "testFunction")
      (i32.const 10)
      (block (result i32)
        (block (result i64) (br_if 0 (i64.const 1))) 
        (br 1 (i32.const 20))
      )
      (drop)
      (call $importedFunction)
    )
  )
  "type mismatch"
)